Allowed anyone to access register

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 /db.sqlite3
 /venv
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+*.log
+*.env
+*.pot
+*.mo
+*.swp
+.DS_Store
+.idea/
+.vscode/
+*.egg-info/
+dist/
+build/
+.eggs/
